# ChangeLog for net-fs/nfs-utils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/nfs-utils/ChangeLog,v 1.219 2013/08/07 13:54:00 xarthisius Exp $

  07 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> nfs-utils-1.2.7-r1.ebuild,
  nfs-utils-1.2.8-r1.ebuild:
  Adjust dependency on rpcbind so that version with systemd units is pulled in
  for packages that require it. Fixes #480006 by redneb <redneb@gmx.com>

*nfs-utils-1.2.8-r1 (26 Jul 2013)
*nfs-utils-1.2.7-r1 (26 Jul 2013)

  26 Jul 2013; Tim Harder <radhermit@gentoo.org> -nfs-utils-1.2.7.ebuild,
  +nfs-utils-1.2.7-r1.ebuild, -nfs-utils-1.2.8.ebuild,
  +nfs-utils-1.2.8-r1.ebuild:
  Remove compiled files bundled in the tarball (fixes bug #478196).

*nfs-utils-1.2.8 (26 Jul 2013)

  26 Jul 2013; Tim Harder <radhermit@gentoo.org> +nfs-utils-1.2.8.ebuild,
  +files/0001-mountd-Fix-is_subdirectory-again.patch,
  +files/nfs-utils-1.2.8-cross-build.patch,
  +files/0001-statd-exit-if-a-statd-is-already-running.patch:
  Version bump.

  13 Jul 2013; Pacho Ramos <pacho@gentoo.org> +files/nfsd.service,
  +files/rpc-mountd.service, +files/rpc-statd.service, nfs-utils-1.2.7.ebuild:
  Install unit file (#468318)

  13 Apr 2013; Mike Frysinger <vapier@gentoo.org> nfs-utils-1.2.6.ebuild,
  nfs-utils-1.2.7.ebuild:
  Force sqlite test to work even when cross-compiling #465576 by Dennis
  Schridde.

  24 Mar 2013; Mike Frysinger <vapier@gentoo.org>
  +files/nfs-utils-1.2.7-libio.patch, nfs-utils-1.2.6.ebuild,
  nfs-utils-1.2.7.ebuild:
  Fix uClibc build w/missing libio.h #459200 by Mark Reiche.

*nfs-utils-1.2.7 (24 Mar 2013)

  24 Mar 2013; Mike Frysinger <vapier@gentoo.org> +nfs-utils-1.2.7.ebuild,
  metadata.xml:
  Version bump #445288 by teidakankan.

  24 Mar 2013; Mike Frysinger <vapier@gentoo.org> +files/nfsmount.confd,
  files/nfsmount.initd, nfs-utils-1.2.6.ebuild:
  Move net usage to conf.d (defaults are unchanged) #439660 by Matthew Schultz.
