@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst prepare
+DEPEND=tcpd? ( sys-apps/tcp-wrappers ) caps? ( sys-libs/libcap ) sys-libs/e2fsprogs-libs >=net-nds/rpcbind-0.2.0-r1 net-libs/libtirpc nfsdcld? ( >=dev-db/sqlite-3.3 ) nfsv4? ( >=dev-libs/libevent-1.0b >=net-libs/libnfsidmap-0.21-r1 kerberos? ( net-libs/librpcsecgss >=net-libs/libgssglue-0.3 net-libs/libtirpc[kerberos] app-crypt/mit-krb5 ) nfsidmap? ( >=net-libs/libnfsidmap-0.24 sys-apps/keyutils ) ) nfsv41? ( sys-fs/lvm2 ) selinux? ( sec-policy/selinux-rpc sec-policy/selinux-rpcbind ) uuid? ( sys-apps/util-linux ) virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool virtual/pkgconfig
+DESCRIPTION=NFS client and server daemons
+EAPI=4
+HOMEPAGE=http://linux-nfs.org/
+IUSE=caps ipv6 kerberos nfsdcld +nfsidmap +nfsv4 nfsv41 selinux tcpd +uuid
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=tcpd? ( sys-apps/tcp-wrappers ) caps? ( sys-libs/libcap ) sys-libs/e2fsprogs-libs >=net-nds/rpcbind-0.2.0-r1 net-libs/libtirpc nfsdcld? ( >=dev-db/sqlite-3.3 ) nfsv4? ( >=dev-libs/libevent-1.0b >=net-libs/libnfsidmap-0.21-r1 kerberos? ( net-libs/librpcsecgss >=net-libs/libgssglue-0.3 net-libs/libtirpc[kerberos] app-crypt/mit-krb5 ) nfsidmap? ( >=net-libs/libnfsidmap-0.24 sys-apps/keyutils ) ) nfsv41? ( sys-fs/lvm2 ) selinux? ( sec-policy/selinux-rpc sec-policy/selinux-rpcbind ) uuid? ( sys-apps/util-linux ) !net-nds/portmap
+RESTRICT=test
+SLOT=0
+SRC_URI=mirror://sourceforge/nfs/nfs-utils-1.2.8.tar.bz2
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	systemd	49c26d08111dd2c62b52cee32151b93b	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=03badaa5652b23c9b366b91ae3b755e5
