@@ -60,22 +60,17 @@ EBUILD nfs-utils-1.2.5.ebuild 3515 SHA256 f666cf561ecbfe6e4a5c1eed271957ba296c5b
 EBUILD nfs-utils-1.2.6.ebuild 3864 SHA256 b9b8d50f103d596ff47718cb96c9bed767f3a50464d832e2119b5c8875716a10 SHA512 ff899f49b30c7614edceb9402c7db6fddd7600a5fddc654f6cf62730830a78e5a3e364b7051ffef2b1997535784bf5d7d03b94a32194418d9fac4df5c7f3dbd4 WHIRLPOOL 444908e3de5fcc8f1f034aeb44ce311166e0a600ac2edb921d27c03dc2b2a77d70a124e398259acd48856ec8322a4c604fbb6e5798a33908206b7e9926d65719
 EBUILD nfs-utils-1.2.7-r1.ebuild 4017 SHA256 4b5ababa6756823dfa640552289afc4454b21f10ea9913859c77bc272d4529e7 SHA512 2b5bc123bb4ae1dbcd1b2b3f3b3b2c4d826b4a2204312e374c401411e4e7b6ed2835386f4094d29195c9ed0976c30ba3d6e1e7c200babc2f3c7437d06702e898 WHIRLPOOL b935d67048eafd035838348dd251744e9238191cdfdc9aba0e6b60a6cf07f605b641629a6ce3f567f4f95041bc6dc967af48edac8a7440159bbef3010c9c4ded
 EBUILD nfs-utils-1.2.8-r1.ebuild 4027 SHA256 19055b182c8bca25dc47efd2516ef11a623939a7f1e15a95e5e10c256258e2cd SHA512 76d8be488fffdbeb0f3e56f5854896e28ae04e0262e26250f613a4fda063fd13a337e761ba12f57034452867d425f20d4c32c24c8e3d56f6f0ee35305237d548 WHIRLPOOL d0d9c4571987cda56c9d6be354b1f3a963ecadb3f9ab4cc1ad26139346cb1f5637655153f8f23dfc810308fbbd354c1916fdc83257682de0fed60137d163c004
-MISC ChangeLog 34939 SHA256 594de7738bcd4c449cf26df8fc3948d935d84a117b4f120626e70576007c7c12 SHA512 42a64509c882ba48ddfb10431927e5bec1f2d4e10585c183d347cf3a0ee6a2ce23f0941218a34919faa2f9c138f42457fc7a400bfb4919174adcc948ca0626a3 WHIRLPOOL 27cb9fe2c976461cc5edbe8b07f60bc7cf9f4860c45ede2acaf5aa06d3ccd129c1fe5aebaea7fc454129615485036cafc0a2c1d06f1b756f3dce2919850ae328
+EBUILD nfs-utils-1.2.8-r2.ebuild 4095 SHA256 76fcc1ef5d657251f8b348938ac224c2a6b9a9efe797ccda8246c772fe51cb77 SHA512 32f7b226591017489302766483a7675f503d9c8990cdcedd8c4d4447fdb069e9b235de053f93d42bd1eb588faf640beea8c9691a8fe68cd9379f887c8b9f0d6e WHIRLPOOL 20bcb1ed15f50ae06244e640550fbce704c4e9734406e532be9f639b25b2664ee046bc855b004efac0b5aa0abd4a5738d48cf88c88d268b7497edcd838a06dc1
+MISC ChangeLog 35166 SHA256 a51aaf8a9a6c7c8e25f0af0f890838830a853f0d2dc96ce27dfed46521a613e4 SHA512 1aaef961ffa2d1e13404277e411dbf3337aa806521c6591bda85c85953572003e451e22e3dd91515a944e2f515088e0dc57e39278b6b8caa9f1b5048cd4ec78d WHIRLPOOL 75035a2e9ee8e5709d57394ef191c10b37b2836f9a23de419bdef840ea78e39b51ddf06fb02582803182fa76e5f68e57df6483e8471ddda44a1dd3f47c5a8072
 MISC metadata.xml 668 SHA256 d9ecc29c31ebf779ec222513db190cc0e9d0737f806aea26913d097b09bbfa47 SHA512 2b269153829d1d8df6e97871814479af8fbe18a48cf0b6a33947212264875a4002feda4163b465b4a67e253e5f27e47badc53d414ebb9f3281253f813fa1dacd WHIRLPOOL a53c14f8e6f7cce4f75a7fda60d8b9f96a57eb3a877470906fa1c40befcd9791411934e7ab610ce612f6d42d4d953e0a2a78ffc9e21e9b98328a395c4de7daa8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSAlF+AAoJEF0huFKJUZL5nFYP/jjpHkJl4ZiJwrIBxXyH6m+g
-XgBtOsjH/MgvqEtdYMHbqc2l/lramZZcqkxCfpi5wPbCErJdWjp0tg1e2/MuykyF
-Jv21yYDTa3d/U2k7jmVX2NU+087A3U+uBac0gpppqYhgl1uvEtSqHE2uMaD/2XAm
-dl8xnKn2ziqZ+m0umBiaEN4og/SdK7FHcTeYJnFGeLTXIBXG3ws/76c6ZzXANIuh
-pyczIN6qtNIEkTEE+VOSvjUDR4Rvpbg/yJPnWzeLbb3GVaxPCFxeQdiQuIYM+Exf
-6XfthhiLF0zuiDGKrGeQwBfQaCXyADNn4Rkg5GEFK3+7ypNjWTTWvqoQZCpRdwTl
-P0xpMYpIRray1hEI/CSQZlbdXeW6zfGtVxaB9CGe1Ojtl3LzSzG7XX08i+jpxwj2
-2vF1ShcAKziJcwSOhHw/j0/PpTYD7yy245I7RnRnj/UJE/q3/j2Z+hIxeNvGAVbJ
-RhrVvAcUeasXt8zW697SmeYG2Lat67S6Uj7cV+pcjyPxDBAe+YqtKwuaW5nM3OIG
-O2KHoMRyK20K1nLS2HFgdOwpD9a+OL4s9fR/uaWDiRqGqqaOJSZsf995voouWD/U
-Vb/HNRKxe0N+TvgTw6o9vrd1PmNs0zHQsVgmp21157Fh2V/99EoPYmS96Ao8lfjM
-NDynScl4iEnDHbnNiRo6
-=U78B
+iQEcBAEBCAAGBQJSHE6IAAoJEEqz6FtPBkyjWNkH/1Bb8v021fnKu5liGUwXjjCR
+jpYNTn1CVg1NJcjDVY6u9WNWUHQCmwQLP0Kbu0/nB/McfBijjWRMyCiu059j3yFR
+h0GgYxCBQNtjzjH3zE0KcDcQ9TfT53sLCIRdcR0I+FlQrv3IV/CF2/xD/9FERML3
+zwoofFkVpQHoHl+geTkFwDNSJPV0d7bfIQkX+MbdAbCGI3I501PxSlVKAYoJr3zx
+yWFRKEoteK9uw/9J/ibgtZqM3UWkNol9YLyqDyEhBA0N7ejY/+rPMHF9V6XbJCMJ
+KLAXi3C71827R43FBeesp3PhV9xoQHkYVtOezpykuEOhk4UjVH56fd4ko+mq5IY=
+=imNC
 -----END PGP SIGNATURE-----
