@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/nfs-utils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/nfs-utils/ChangeLog,v 1.219 2013/08/07 13:54:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/nfs-utils/ChangeLog,v 1.220 2013/08/27 07:00:20 radhermit Exp $
+
+*nfs-utils-1.2.8-r2 (27 Aug 2013)
+
+  27 Aug 2013; Tim Harder <radhermit@gentoo.org> +nfs-utils-1.2.8-r2.ebuild:
+  Add configure flag to use libgssglue for GSS support, fixes rpc.gssd segfault
+  issues (bug #479982 by dnh2000).
 
   07 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> nfs-utils-1.2.7-r1.ebuild,
   nfs-utils-1.2.8-r1.ebuild:
